# sparseir-rust

./: .gitignore  .gitmodules  AGENTS.md  C-API_IMPLEMENTATION_PLAN.md  CAPI_SPECIFICATION.md  CLAUDE.md  C_API_COMPATIBILITY_STATUS.md  Cargo.toml  DEBUG_SORT.md  DEPENDENCY_ANALYSIS.md  FINAL_STATUS.md  FINAL_SUMMARY.md  FUNCS_DESIGN.md  GEMM_DESIGN_V2.md  GEMM_FINAL_DESIGN.md  GEMM_INJECTION_PLAN.md  LICENSE  MERGE_SUMMARY.md  MIGRATION_COMPLETE.md  MIGRATION_FINAL_PLAN.md  MIGRATION_NDARRAY_TO_MDARRAY.md  MIGRATION_STATUS.md  PLAN.md  POLY_EXTENSION_COMPLETE.md  POLY_EXTENSION_PLAN.md  PROGRESS_SUMMARY.md  REDUCED_DOMAIN_DESIGN.md  SPARSEIR_NDARRAY_MIGRATION.md  STATUS_SUMMARY.md  SUMMARY.md  SVD_WARNING_EXPLANATION.md  TAU_SAMPLING_MIGRATION_PLAN.md  TENSOR_CONTRACTION_ANALYSIS.md  TENSOR_CONTRACTION_EXAMPLE.rs  TEST_RESULTS_ANALYSIS.md  TODAY_SUMMARY.md  TODO.md  WIP_XPREC_SVD_MIGRATION.md  XPREC_MIGRATION_STATUS.md  XPREC_MIGRATION_TODO.md  (+14 more)
sparseir-capi/: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml
sparseir-capi/examples/: test_julia.jl
sparseir-capi/include/: sparseir_capi.h
sparseir-capi/src/: basis.rs  dlr.rs  funcs.rs  gemm.rs  kernel.rs  lib.rs  macros.rs  sampling.rs  sve.rs  types.rs  utils.rs
sparseir-capi/tests/: integration_test.rs
sparseir-rust/: CLEANUP_UNUSED_DEPS.md  CODING_RULES.md  Cargo.toml  Cargo.toml.new  DESIGN.md  README.md  TODO_DLR.md  TOMORROW.md  build.rs  test_default_tau_sampling.rs  test_kernel
sparseir-rust/examples/: arc_demo.rs  associated_constant_demo.rs  basic_kernel_usage.rs  function_slice_return  lifetime_demo.rs  lifetime_detailed_demo  lifetime_detailed_demo.rs  poly_usage.rs  rust_vs_cpp_demo.rs  slice_return_demo  unit_struct_demo.rs
sparseir-rust/src/: basis.rs  basis_comparison_tests.rs  basis_tests.rs  basis_trait.rs  basis_trait_tests.rs  dlr.rs  dlr_tests.rs  fitter.rs  fitter_tests.rs  freq.rs  gauss.rs  gauss_mdarray.rs  gauss_tests.rs  gemm.rs  get_tnl_comparison.rs  interpolation1d.rs  interpolation1d_tests.rs  interpolation2d.rs  interpolation2d_tests.rs  kernel.rs  kernel.rs.bak  kernel.rs.bak2  kernel_tests.rs  kernelmatrix.rs  kernelmatrix_mdarray.rs  kernelmatrix_tests.rs  lib.rs  matsubara_sampling.rs  matsubara_sampling_tests.rs  mdarray_compat.rs  numeric.rs  numeric_tests.rs  omega_sampling_tests.rs  poly.rs  poly_rescale_tests.rs  poly_tests.rs  polyfourier.rs  polyfourier_tests.rs  sampling.rs  special_functions.rs  (+10 more)
sparseir-rust/src/sve/: compute.rs  mod.rs  result.rs  result_mdarray.rs  strategy.rs  tests.rs  types.rs  utils.rs
sparseir-rust/test_openblas/: Cargo.toml
sparseir-rust/tests/: basis_comparison.rs  basis_comparison_tests.rs  basis_tests.rs  basis_trait_tests.rs  benchmarks.rs  common.rs  debug_uhat.rs  debug_uhat_full_size.rs  dlr_basis_tests.rs  dlr_tests.rs  fitter_tests.rs  gauss_high_precision_tests.rs  gauss_tests.rs  gemm_tests.rs  get_tnl_comparison.rs  integration_tests.rs  interpolation1d_tests.rs  interpolation2d_tests.rs  kernel_interpolation_tests.rs  kernel_tests.rs  kernel_tests.rs.bak  kernelmatrix_tests.rs  matrix_from_gauss_tests.rs  matsubara_sampling_tests.rs  numeric_tests.rs  omega_sampling_tests.rs  poly_benchmarks.rs  poly_rescale_tests.rs  poly_tests.rs  polyfourier_tests.rs  sampling_complex_tests.rs  sampling_tests.rs  sve_comparison.rs  sve_comparison_tests.rs  sve_extend_tests.rs  sve_tests.rs  sve_tests.rs.bak  tau_sampling_tests.rs  taufuncs_tests.rs
sparseir-rust/tests/bak/: dashu_float_precision_tests.rs  dashu_float_precision_tests.rs.backup  dashu_float_precision_tests.rs.bak
sparseir-rust/tests/reference_data/: sve_lambda_5.0_eps_1.0e-6_svals.txt  sve_lambda_5.0_eps_1.0e-6_u.txt  sve_lambda_5.0_eps_1.0e-6_v.txt
test_ndarray_linalg/: Cargo.toml
test_ndarray_linalg/src/: main.rs
test_openblas_shared/: Cargo.toml
test_openblas_shared/src/: lib.rs
test_openblas_system/: Cargo.toml
test_openblas_system/src/: main.rs
test_xprec_svd/: Cargo.toml
test_xprec_svd/src/: main.rs
xprec-svd/: AUTO_MIGRATE.sh  Cargo.toml  PLAN.md  README.md  TESTS_STATUS.md  TEST_STATUS.md  XPREC_RS_MIGRATION.md
xprec-svd-ref/: Cargo.toml  README.md
xprec-svd-ref/examples/: twofloat_usage.rs
xprec-svd-ref/src/: lib.rs  lib_mdarray.rs
xprec-svd-ref/src/qr/: householder.rs  rrqr.rs  truncate.rs
xprec-svd-ref/src/svd/: jacobi.rs  mod.rs
xprec-svd-ref/src/utils/: mod.rs  norms.rs  pivoting.rs  validation.rs
xprec-svd-ref/tests/: debug_direct_svd_ndarray.rs  debug_reconstruction_ndarray.rs  debug_rrqr_ndarray.rs  hilbert_reconstruction_tests.rs
xprec-svd/examples/: debug_2x2_jacobi_step_by_step.rs  debug_givens.rs  debug_jacobi_2x2.rs  debug_jacobi_step_by_step.rs  debug_jacobi_svd.rs  debug_off_diagonal.rs  debug_rank_one_step_by_step.rs  debug_rectangular.rs  debug_svd_2x2_step_by_step.rs  debug_threshold.rs  debug_uv_columns.rs  test_reconstruction_2x2_rank_one.rs  test_reconstruction_diagonal.rs  test_reconstruction_identity.rs  test_right_rotation.rs
xprec-svd/src/: lib.rs  lib_mdarray.rs  tsvd.rs
xprec-svd/src/precision/: mod.rs
xprec-svd/src/qr/: householder.rs  mod.rs  rrqr.rs  truncate.rs
xprec-svd/src/svd/: jacobi.rs  mod.rs
xprec-svd/src/utils/: norms.rs  pivoting.rs  validation.rs
xprec-svd/tests/: basic_rrqr_tests.rs  debug_direct_svd_mdarray.rs  debug_rrqr_mdarray.rs  debug_vt_index.rs  df64_rrqr_tests.rs  hilbert_reconstruction_tests.rs  jacobi_svd_tests.rs  rrqr_tests.rs  simple_df64_test.rs  simple_twofloat_test.rs  svd_accuracy_tests.rs  test_reconstruction.rs  test_reconstruction_correct.rs  test_reconstruction_debug.rs  test_sign_issue.rs  test_sorting_bug.rs  twofloat_rrqr_tests.rs  twofloat_rrqr_tests.rs.bak  twofloat_svd_test.rs
xprec-svd/tests_disabled/: jacobi_svd_tests.rs  simple_twofloat_test.rs  svd_accuracy_tests.rs
xprec-svd/tests_to_migrate/: jacobi_svd_tests.rs  rrqr_tests.rs
xprec-svd2/: Cargo.toml
xprec-svd2/src/: lib.rs  svd.rs  tsvd.rs
xprec-svd2/tests/: hilbert_reconstruction_tests.rs
