[package]
name = "sparseir-capi"
version = "0.1.0"
edition = "2021"
authors = ["SparseIR Contributors"]
description = "C API for SparseIR Rust implementation"
license = "MIT"

[lib]
name = "sparseir_capi"
# Build both dynamic and static libraries, plus rlib for Rust tests
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# Main SparseIR library
sparseir-rust = { path = "../sparseir-rust" }

# Array library (for Shape trait)
mdarray = { git = "https://github.com/fre-hu/mdarray.git", rev = "11ce08ae30bae2269c85eab1c4620028d160591a" }

# Error code type
libc = "0.2"

# Complex numbers
num-complex = "0.4"

# Macro utilities for identifier concatenation
paste = "1.0"

[build-dependencies]
cbindgen = "0.27"

[profile.release]
# Keep symbols for C API
strip = false
# Optimize for size and speed
opt-level = 3
lto = true
codegen-units = 1
