[package]
name = "sparseir-capi"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "C API for SparseIR Rust implementation"
license.workspace = true

[lib]
name = "sparseir_capi"
# Build both dynamic and static libraries, plus rlib for Rust tests
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# Main SparseIR library
sparseir-rust = { path = "../sparseir-rust" }

# Array library (for Shape trait)
mdarray.workspace = true

# Error code type
libc.workspace = true

# Complex numbers
num-complex.workspace = true

# Macro utilities for identifier concatenation
paste = "1.0"

[build-dependencies]
cbindgen = "0.27"

[profile.release]
# Keep symbols for C API
strip = false
# Optimize for size and speed
opt-level = 3
lto = true
codegen-units = 1
