[package]
name = "sparseir-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Rust implementation of SparseIR functionality"
license = "MIT"
repository = "https://github.com/sparseir-rust/sparseir-rust"

[dependencies]
# Core linear algebra - mdarray with Faer backend
mdarray = { path = "../mdarray" }
mdarray-linalg = { path = "../mdarray-linalg/mdarray-linalg" }
mdarray-linalg-faer = { path = "../mdarray-linalg/mdarray-linalg-faer", optional = true }

# Faer - Pure Rust high-performance linear algebra (always available)
faer = "0.23"
faer-traits = "0.23"

# nalgebra (still needed for some numeric operations)
nalgebra = "0.32"

# Extended precision
twofloat = "0.2"
num-traits = "0.2"
num-complex = "0.4"

# High-precision arithmetic
dashu-float = "0.4"
dashu-base = "0.4"

# Special functions
special = "0.2"
statrs = "0.16"

# Error handling
thiserror = "1.0"

# High-precision SVD (internal dependency) - now mdarray-only
xprec-svd = { path = "../xprec-svd" }

# Parallel processing
rayon = "1.7"

[dev-dependencies]
approx = "0.5"
proptest = "1.0"
# Math functions
libm = "0.2"

[features]
default = ["faer-backend"]
faer-backend = ["mdarray-linalg-faer"]
# blas-backend = ["mdarray-linalg-blas", "openblas-src"]
# lapack-backend = ["mdarray-linalg-lapack", "openblas-src"]

