[package]
name = "sparseir-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Rust implementation of SparseIR functionality"
license = "MIT"
repository = "https://github.com/sparseir-rust/sparseir-rust"
authors = ["SparseIR Team"]

# Library configuration for shared library
[lib]
name = "sparseir_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core linear algebra - mdarray with Faer backend (use same version as xprec-svd)
mdarray = "0.7.1"
mdarray-linalg = { path = "../mdarray-linalg/mdarray-linalg" }
mdarray-linalg-faer = { path = "../mdarray-linalg/mdarray-linalg-faer" }

# Faer - Pure Rust high-performance linear algebra
faer = "0.23"
faer-traits = "0.23"

# Extended precision
num-complex = "0.4"
num-traits = "0.2"

# High-precision arithmetic
dashu-float = "0.4"
dashu-base = "0.4"

# Special functions
special = "0.2"
statrs = "0.16"

# Error handling
thiserror = "1.0"

# High-precision SVD (internal dependency) - now mdarray-only
xprec-svd = { path = "../xprec-svd" }

# Parallel processing
rayon = "1.7"

# Lazy static initialization for GEMM dispatcher
once_cell = "1.19"

# C FFI types (for BLAS function pointers)
libc = "0.2"

[dev-dependencies]
approx = "0.5"
proptest = "1.0"
# Math functions
libm = "0.2"

# System BLAS for tests only (not used in library code)
blas-sys = "0.7"

[build-dependencies]
pkg-config = "0.3"

[features]
default = []
# Shared library features
shared-lib = []
