[package]
name = "sparseir-rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Rust implementation of SparseIR functionality"
license.workspace = true
repository.workspace = true
authors.workspace = true

# Library configuration for shared library
[lib]
name = "sparseir_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core linear algebra - mdarray with Faer backend
mdarray.workspace = true
mdarray-linalg = { path = "../mdarray-linalg/mdarray-linalg" }
mdarray-linalg-faer = { path = "../mdarray-linalg/mdarray-linalg-faer" }

# Faer - Pure Rust high-performance linear algebra
faer.workspace = true
faer-traits.workspace = true

# Extended precision
xprec = { path = "../xprec-rs" }
simba = "0.9"
num-complex.workspace = true
num-traits.workspace = true

# High-precision arithmetic
dashu-float.workspace = true
dashu-base.workspace = true

# Special functions
special.workspace = true
statrs.workspace = true

# Error handling
thiserror.workspace = true

# Linear algebra
nalgebra = "0.33"

# Parallel processing
rayon.workspace = true

# Lazy static initialization for GEMM dispatcher
once_cell.workspace = true

# C FFI types (for BLAS function pointers)
libc.workspace = true

[dev-dependencies]
approx.workspace = true
proptest.workspace = true
# Math functions
libm.workspace = true

# System BLAS for tests only (not used in library code)
blas-sys.workspace = true

[build-dependencies]
pkg-config = "0.3"

[features]
default = []
# Shared library features
shared-lib = []