[package]
name = "xprec-svd"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "High-precision truncated SVD implementation"
license = "MIT"
repository = "https://github.com/sparseir-rust/xprec-svd"

[dependencies]
# Core linear algebra - mdarray only (use same version as mdarray-linalg)
mdarray = "0.7.1"
mdarray-linalg = "0.1.1"
mdarray-linalg-faer = "0.1.1"
faer = "0.19"
nalgebra = "0.32"
simba = "0.9"

# Extended precision
xprec = { path = "../xprec-rs" }
num-traits = "0.2"

# Approximate equality
approx = "0.5"

# Error handling
thiserror = "1.0"

# Serialization (optional)
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
f128 = []  # Enable f128 support when available
serialize = ["serde"]

[dev-dependencies]
approx = "0.5"
proptest = "1.0"
