[package]
name = "xprec-svd2"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "High-precision truncated SVD implementation using nalgebra"
license = "MIT"
repository = "https://github.com/sparseir-rust/xprec-svd2"

[dependencies]
# Core linear algebra - nalgebra only
nalgebra = "0.34"
simba = "0.9"

# Extended precision
xprec = { path = "../xprec-rs" }
num-traits = "0.2"

# Approximate equality
approx = "0.5"

# Error handling
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"